--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.1
+  intl: ^0.16.1
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
