--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.1
   intl: ^0.16.1
   toast: ^0.1.5
+  percent_indicator: ^2.1.5
 
 dev_dependencies:
   flutter_test:
